<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DetailGithubUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            android:scaleType="center"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/photo_user" />
        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/detail_name"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/u0040"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/detail_username"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_baseline_people_outline_24"/>
            <TextView
                android:id="@+id/tv_detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/detail_followers"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/follower"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/u00ba"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/tv_detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/detail_following"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="1dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/following_word"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/company"/>
                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/detail_company"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/location"/>
                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/detail_location"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_detail_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:text="@string/detail_repository"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="2dp"
                android:text="@string/repositories"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>